# my-kivy-app

./: Dockerfile  FC3DCS3.py  UAFC3D.csv  app.py  cnn.pt  cnn_ema.pt  predict.json  predict.py  predict_super.py  pyproject.toml  train_cat.py  train_cnn.py  train_large.py  train_lgb.py  tune_weights.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
models/: cat_bai.cbm  cat_ge.cbm  cat_shi.cbm  lgb_bai.txt  lgb_shi.txt
src/fc3d/: __init__.py  __main__.py  cli.py  data.py  ema.py  models.py  models_cat.py  models_cnn.py  models_lgb.py  train.py
src/fc3d.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fc3d/ensemble/: voter.py
tests/: test_smoke.py
