[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fc3d"
version = "3.0.0"
description = "Industrial-grade FC3D predictor"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "pandas>=1.5",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
    "optuna>=3.2",
    "matplotlib>=3.7",
]

[project.scripts]
fc3d = "fc3d.cli:main"

[tool.setuptools.packages.find]
where = ["src"]